# Text-Based-RPG

./: CMakeLists.txt  Makefile  Player.h  README.md  enemy
.github/workflows/: main.yml
Enemies/: Boss.cpp  Boss.h  Enemy.h  Minion.cpp  Minion.h
Weapon/: test_weapon.cpp  weapon.cpp  weapon.hpp
header/: Player.hpp  archetypes.hpp  archetypes_test.cpp  bag.hpp  combat.hpp  entity.hpp  item.hpp  player.cpp  player.hpp  player_test.cpp  story.hpp
header/Enemies/: Boss.cpp  Boss.hpp  Enemy.hpp  Minion.cpp  Minion.hpp  enemy_test.cpp  stoneGolem.hpp  test.cpp
header/Weapon/: test_weapon.cpp  weapon.cpp  weapon.hpp
src/: entity.cpp  item.cpp  main.cpp  player.cpp
test/: test.cpp
unit_tests/: test.cpp  test.hpp
